# valheim-server

./: Dockerfile  pyproject.toml  server.py  start_server_bepinex.sh  update.sh
